Fixed bug #35342 (isset(DOMNodeList->length) returns false) add test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@201086 c90b9560-bf6c-de11-be94-00142212c4b1